Remove old code, add naive sim

--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -297,7 +297,6 @@
     "\n",
     "\txy_real_series = torch.empty(q_real_series.size()).to(device)\n",
     "\txy_hat_series = torch.empty(q_real_series.size()).to(device)\n",
-    "\ttheta_real_series = torch.empty((q_real_series.size())).to(device)\n",
     "\n",
     "\tfor i, (q_real, q_hat) in enumerate(zip(q_real_series, q_hat_series)):\n",
     "\t\txy_real, _ = transforms.forward_kinematics(rp, q_real)\n",
@@ -465,26 +464,99 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(settling_time_thsims)\n",
-    "print(rmse_thsims)\n",
-    "print(work_thsims)\n",
+    "def sim_collocated_naive(xy_start, xy_des, timestamp):\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.set_ylabel('Settling time [s]')\n",
     "\n",
-    "boxdata = [settling_time_thsims.cpu(), rmse_thsims.cpu().detach()]\n",
-    "colors = [\"tab:orange\", \"tab:blue\"]\n",
-    "labels = [\"hi\", \"ho\"]\n",
+    "\t(q_des, q_d_des, is_clockwise_des, th_des_ana, th_d_des_ana, \n",
+    "\t\tth_des_est, th_d_des_est, q_des_est, q_d_des_est, xy_des_est) = desired_conditions(xy_des, model_ana)\n",
     "\n",
-    "bplot = ax.boxplot(boxdata,\n",
-    "\t\t\t\t   patch_artist=True,  # fill with color\n",
-    "\t\t\t\t   tick_labels=labels)  # will be used to label x-ticks\n",
+    "\t(q_start, q_d_start, q_dd_start, is_clockwise_start, th_start_est, th_d_start_est, \n",
+    "\t\tth_start_ana, th_d_start_ana, q_start_est, q_d_start_est, xy_start_est) = start_conditions(xy_start, model_ana)\n",
     "\n",
-    "# fill with colors\n",
-    "for patch, color in zip(bplot['boxes'], colors):\n",
-    "\tpatch.set_facecolor(color)\n",
+    "\tth_naive_series, th_d_naive_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "\tq_naive_series, q_d_naive_series, q_dd_naive_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
     "\n",
-    "plt.show()"
+    "\tnaive_des = torch.cat((q_des.T, q_d_des.T), dim = 0)\n",
+    "\n",
+    "\t\n",
+    "\n",
+    "\tu_naive_series = torch.empty((0,1)).to(device)\n",
+    "\ttau_q_naive_series = torch.empty((0,2)).to(device)\n",
+    "\n",
+    "\tq, q_d, q_dd = q_start, q_d_start, q_dd_start\n",
+    "\n",
+    "\tis_clockwise = False\n",
+    "\n",
+    "\tmodel = autoencoders.Analytic_transformer(rp)\n",
+    "\n",
+    "\tfor t in torch.arange(0, t_end, dt):\n",
+    "\t\tt_string = \"Time: [\" + str(t.item().__round__(3)) + \"/\" + str(t_end) + \".0]\"\n",
+    "\t\tif torch.allclose(t, torch.floor(t)) and torch.floor(t)%5 == 0:\n",
+    "\t\t\tprint(t_string)\n",
+    "\n",
+    "\n",
+    "\t\t\"\"\" Obtain Jacobian, dynamical matrices\"\"\"\n",
+    "\t\tM_q_naive, C_q_naive, G_q_naive = dynamics.dynamical_matrices(rp, q.squeeze(0), q_d.squeeze(0))\n",
+    "\t\tA_q_naive = dynamics.input_matrix(rp, q.squeeze(0))\n",
+    "\n",
+    "\n",
+    "\t\t\"\"\" Feed-forward simulation of the system, not on real dynamics \"\"\"\n",
+    "\n",
+    "\t\tnaive_state = torch.cat((q.T, q_d.T), dim = 0)\n",
+    "\t\tprint(\"naive state:\", naive_state)\n",
+    "\n",
+    "\t\tnaive_error = naive_state - naive_des\n",
+    "\t\tdelta_u = K_naive @ naive_error\n",
+    "\t\tprint(\"delta_u:\", delta_u)\n",
+    "\t\tu = delta_u + torch.pinverse(A_q_naive) @ G_q_naive\n",
+    "\n",
+    "\t\t\"\"\" Update the real system and apply latent control input. \"\"\"\n",
+    "\n",
+    "\n",
+    "\t\ttau_q_naive = A_q_naive * u\n",
+    "\t\tq_dd = (torch.pinverse(M_q_naive) @ (tau_q_naive - C_q_naive @ ((q_d).T)- G_q_naive)).T  #  - C_damp @ ((q_d_real).T) \n",
+    "\t\tq_d = q_d + q_dd * dt\n",
+    "\t\tq = q + q_d * dt\n",
+    "\t\tq = transforms.wrap_to_pi(q)\n",
+    "\t\t\n",
+    "\t\tth_naive = model.encoder_vmap(q)\n",
+    "\t\tth_d_naive = (model.jacobian_enc(q) @ q_d.T).T\n",
+    "\n",
+    "\n",
+    "\t\t\"\"\" Store data for plotting \"\"\"\n",
+    "\n",
+    "\t\tth_naive_series = torch.cat((th_naive_series, th_naive.detach()), dim=0)\n",
+    "\t\tth_d_naive_series = torch.cat((th_d_naive_series, th_d_naive.detach()), dim=0)\n",
+    "\t\t\n",
+    "\t\tq_naive_series = torch.cat((q_naive_series, q.detach()), dim=0)\n",
+    "\t\tq_d_naive_series = torch.cat((q_d_naive_series, q_d.detach()), dim=0)\n",
+    "\t\tq_dd_naive_series = torch.cat((q_dd_naive_series, q_dd.detach()), dim=0)\n",
+    "\n",
+    "\t\tu_naive_series = torch.cat((u_naive_series, u.detach()), dim=0)\n",
+    "\t\ttau_q_naive_series = torch.cat((tau_q_naive_series, tau_q_naive.T.detach()), dim=0)\n",
+    "\n",
+    "\t\tprint(\"\")\n",
+    "\n",
+    "\n",
+    "\txy_naive_series = torch.empty(q_naive_series.size()).to(device)\n",
+    "\n",
+    "\tfor i, q_naive in enumerate(q_naive_series):\n",
+    "\t\txy_naive, _ = transforms.forward_kinematics(rp, q_naive)\n",
+    "\t\txy_naive_series[i] = xy_naive.unsqueeze(0)\n",
+    "\n",
+    "\tnaive_sim_data = {\n",
+    "\t\t\"th_naive_s\": th_naive_series,\n",
+    "\t\t\"th_d_naive_s\": th_d_naive_series,\n",
+    "\t\t\"q_naive_s\": q_naive_series,\n",
+    "\t\t\"q_d_naive_s\": q_d_naive_series,\n",
+    "\t\t\"q_dd_naive_s\": q_dd_naive_series,\n",
+    "\t\t\"u_naive_s\": u_naive_series,\n",
+    "\t\t\"tau_q_naive_s\": tau_q_naive_series,\n",
+    "\t\t\"xy_naive_s\": xy_naive_series,\n",
+    "\t}\n",
+    "\n",
+    "\treturn naive_sim_data\n",
+    "\t\t"
    ]
   },
   {
