Calc settling time, remove old metadata code

--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -565,33 +565,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_dir = f\"collocated_results/simulation_{timestamp}\"\n",
-    "os.makedirs(save_dir, exist_ok=True)\n",
-    "print(xy_start[1])\n",
-    "print(Kp[0,0].item())\n",
-    "metadata = {\n",
-    "\t\"timestamp\": timestamp,\n",
-    "\t\"Learned transform\": neural_net,\n",
-    "\t\"Model location\": model_location,\n",
-    "\t\"Model clockwise\": model_cw, \n",
-    "\t\"PD gains\": {\n",
-    "\t\t\"Kp\": [[Kp[0,0].item(), Kp[0,1].item()], \n",
-    "\t\t\t   [Kp[1,0].item(), Kp[1,1].item()]],  \n",
-    "\t\t\"Kd\": [[Kd[0,0].item(), Kd[0,1].item()], \n",
-    "\t\t\t   [Kd[1,0].item(), Kd[1,1].item()]]   \n",
-    "\t},\n",
-    "\t\"Actuator location\": {\"x_a\": rp[\"xa\"], \"y_a\": rp[\"ya\"]},\n",
-    "\t\"xy start\": {\"x\": xy_start[0].item(), \"y\": xy_start[1].item()},\n",
-    "\t\"Time step\": dt,\n",
-    "\t\"Sim time\": t_end,\n",
-    "}\n",
+    "def calc_settling_time(th_0_abs_error_series, th_des_ana, th_start_ana, settling_time_threshold = 0.05):\n",
     "\n",
-    "metadata[\"PD gains\"][\"Kp\"] = str(metadata[\"PD gains\"][\"Kp\"])\n",
-    "metadata[\"PD gains\"][\"Kd\"] = str(metadata[\"PD gains\"][\"Kd\"])\n",
+    "\t\"\"\"\n",
+    "\tFunction to calculate settling time of a simulation, or return  \n",
+    "\t\"\"\"\n",
     "\n",
-    "metadata_path = os.path.join(save_dir, \"metadata.json\")\n",
-    "with open(metadata_path, \"w\") as f:\n",
-    "\tjson.dump(metadata, f, indent=4)"
+    "\tth_distance = torch.abs(th_des_ana[0,0] - th_start_ana[0,0])\n",
+    "\ttolerance = settling_time_threshold * th_distance\n",
+    "\tprint(\"Tolerance distance from th_des:\", round(tolerance.item(), 5), \"[m]\")\n",
+    "\n",
+    "\twithin_tolerance = th_0_abs_error_series <= tolerance\n",
+    "\tmatch_indices = torch.nonzero(within_tolerance).squeeze()\n",
+    "\tprint(\"THIS SHOULD PROBABLY TAKE THE LAST MATCH\")\n",
+    "\n",
+    "\tif match_indices.numel() > 0:\n",
+    "\t\tfirst_time_idx = match_indices[0].item()\n",
+    "\t\tsettling_time = first_time_idx * dt\n",
+    "\t\tprint(f\"Reached within 5% tolerance at t = {settling_time:.2f} seconds.\")\n",
+    "\telse:\n",
+    "\t\tprint(\"Did not reach within 5% tolerance.\")\n",
+    "\t\tsettling_time = torch.inf\n",
+    "\n",
+    "\treturn settling_time, tolerance, match_indices\n",
+    "\n",
+    "def calc_rmse(theta_real_series, th_des_ana, match_indices):\n",
+    "\n",
+    "\n",
+    "\tif match_indices.numel() > 0:\n",
+    "\t\tfirst_time_idx = match_indices[0].item()\n",
+    "\t\tsettled_theta = theta_real_series[3*first_time_idx:, 0]\n",
+    "\t\trmse = torch.sqrt(torch.mean((settled_theta - th_des_ana[0, 0]) ** 2))\n",
+    "\t\tprint(f\"RMSE after 3x settling time: {rmse.item():.6f} [m]\")\n",
+    "\telse:\n",
+    "\t\tprint(\"Did not reach within 5% tolerance.\")\n",
+    "\t\tsettling_time = torch.inf\n",
+    "\t\trmse = torch.inf \n",
+    "\n",
+    "\treturn rmse\n",
+    "    "
    ]
   },
   {
