Remove video generation, add code which calls external

--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -612,88 +612,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stride = 1\n",
-    "pos_end_q_real, pos_elbow_q_real = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_real_series[::stride])\n",
-    "pos_end_q_est, pos_elbow_q_est = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_est_series[::stride])\n",
-    "#pos_end_q_naive, pos_elbow_q_naive = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_naive_series[::stride])\n",
+    "def plot_settling(th_0_error_series, tolerance, settling_time):\n",
+    "\t# Time vector (same length as error series)\n",
+    "\tt_series = torch.arange(0, t_end, dt)\n",
     "\n",
-    "frames_q_real = plotter.frame_pendulum(pos_end_q_real, pos_elbow_q_real)\n",
-    "frames_q_est = plotter.frame_pendulum(pos_end_q_est, pos_elbow_q_est)\n",
-    "#frames_q_naive = plotter.frame_pendulum(pos_end_q_naive, pos_elbow_q_naive)\n",
+    "\t# Detach if needed (for plotting outside torch computation graph)\n",
+    "\terror_np = th_0_error_series.detach().cpu().numpy()\n",
+    "\tt_np = t_series.cpu().numpy()\n",
     "\n",
-    "data_real = {\n",
-    "\t\"frames\": frames_q_real,\n",
-    "\t\"times\": dt,\n",
-    "\t\"name\": \"q_real\", \n",
-    "\t\"arm_color\": \"tab:blue\",\n",
-    "\t\"act_color\": \"tab:cyan\"\n",
-    "}\n",
+    "\t# Plot\n",
+    "\tplt.figure(figsize=(4, 3))\n",
+    "\tplt.plot(t_np, error_np, label=r\"$\\bar{θ}_{0} - θ_{0}$\", color='tab:blue')\n",
+    "\tplt.axhline(y=-tolerance.item(), color='tab:red', linestyle='--', label=\"-5% Tolerance\")\n",
+    "\tplt.axhline(y=tolerance.item(), color='tab:red', linestyle='--', label=\"5% Tolerance\")\n",
+    "\tplt.axvline(x=settling_time, color='tab:green', linestyle='--', label=\"Settling Time\")\n",
     "\n",
-    "data_est = {\n",
-    "\t\"frames\": frames_q_est,\n",
-    "\t\"times\": dt,\n",
-    "\t\"name\": \"q_est\",\n",
-    "\t\"arm_color\": \"tab:orange\", \n",
-    "\t\"act_color\": \"tab:red\"\n",
-    "} \n",
-    "\n",
-    "\"\"\"\n",
-    "data_naive = {\n",
-    "\t\"frames\": frames_q_naive,\n",
-    "\t\"times\": dt,\n",
-    "\t\"name\": \"q_naive\",\n",
-    "\t\"arm_color\": \"tab:green\", \n",
-    "\t\"act_color\": \"tab:olive\"\n",
-    "}\n",
-    "\"\"\"\n",
-    "\n",
-    "ref_pos_real = {\n",
-    "\t\"pos\": xy_des,\n",
-    "\t\"name\": \"real\",\n",
-    "\t\"color\": \"tab:blue\"\n",
-    "}\n",
-    "\n",
-    "ref_pos_est = {\n",
-    "\t\"pos\": xy_des_est,\n",
-    "\t\"name\": \"est\",\n",
-    "\t\"color\": \"tab:orange\"\n",
-    "}\n",
-    "\n",
-    "\"\"\"\n",
-    "ref_pos_naive = {\n",
-    "\t\"pos\": xy_des,\n",
-    "\t\"name\": \"naive\",\n",
-    "\t\"color\": \"tab:green\"\n",
-    "}\n",
-    "\"\"\"\n",
-    "\n",
-    "ref_poss = [ref_pos_real]#, ref_pos_est]#, ref_pos_naive]\n",
-    "\n",
-    "frames_data = [data_real, data_est]#, data_naive]\n",
-    "#frames_data = [data_est]\n",
-    "#frames_data = [data_real]\n",
-    "\n",
-    "name_rp = \"RP:(\" + str(rp[\"xa\"]) + \",\" + str(rp[\"ya\"]) + \")_\"\n",
-    "name_ref = \"ref:(\" + str(xy_des[0].item()) + \",\" + str(xy_des[1].item()) + \")_\"\n",
-    "\n",
-    "if neural_net:\n",
-    "\tmodel_type = \"NN\"\n",
-    "else:\n",
-    "\tmodel_type = \"AL\"\n",
-    "\n",
-    "file_name = \"t_end:[\" + str(t_end) + \"]_dt:[\" + str(dt) + \"]_stride:[\" + str(stride) + \"]_0.mp4\"\n",
-    "file_counter = 0\n",
-    "\n",
-    "output_path = os.path.join(save_dir, file_name)\n",
-    "\n",
-    "while os.path.isfile(output_path):\n",
-    "\tprint(\"file name already exists\")\n",
-    "\tfile_counter += 1\n",
-    "\tfile_name = file_name[:-6] + \"_\" + str(file_counter) + \".mp4\"\n",
-    "\toutput_path = os.path.join(save_dir, file_name)\n",
-    "\n",
-    "plotter.animate_pendulum(frames_data, ref_poss=ref_poss, plot_actuator=True, save_path=output_path, fps = 1/(dt*stride), dt = dt*stride)\n",
-    "#plotter.animate_pendulum(frames_data, ref_pos=None, plot_actuator=False, file_name=file_name, fps = 1/(dt*stride), dt = dt*stride)\n"
+    "\tplt.title(\"Error of \" + r\"$θ_0$\" + \" vs Time\")\n",
+    "\tplt.xlabel(\"Time [s]\")\n",
+    "\tplt.ylabel(\"Error [m]\")\n",
+    "\tplt.xlim(0, t_end)\n",
+    "\tplt.legend()\n",
+    "\tplt.grid(True)\n",
+    "\tplt.tight_layout()\n",
+    "\tplt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Trial data generation"
    ]
   },
   {
