Remove plot generation, add sample data generation

--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -650,77 +650,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasets_q = [\n",
-    "\t#{\n",
-    "\t#    \"name\": \"est\",\n",
-    "\t#    \"values\": q_est_series.cpu().detach().numpy(),\n",
-    "\t#    \"color\": \"tab:orange\"\n",
-    "\t#},\n",
-    "\t{\n",
-    "\t\t\"name\": \"real\",\n",
-    "\t\t\"values\": q_real_series.cpu().detach().numpy(),\n",
-    "\t\t\"color\": \"tab:blue\"\n",
-    "\t}#,\n",
-    "\t#{\n",
-    "\t#    \"name\": \"naive\",\n",
-    "\t#    \"values\": q_naive_series.cpu().detach().numpy(),\n",
-    "\t#    \"color\": \"tab:green\"\n",
-    "\t#}\n",
-    "]\n",
-    "datasets_th = [\n",
-    "\t{\n",
-    "\t\t\"name\": \"est\",\n",
-    "\t\t\"values\": th_series.cpu().detach().numpy(),\n",
-    "\t\t\"color\": \"tab:orange\"\n",
-    "\t}#,56\n",
-    "\t#{\n",
-    "\t#    \"name\": \"ana\",\n",
-    "\t#    \"values\": th_\n",
-    "\t#    \"color\": \"tab:blue\"\n",
-    "\t#}\n",
-    "]\n",
+    "n_sims = 4\n",
     "\n",
-    "datasets_xy = [\n",
-    "\t#{\n",
-    "\t#    \"name\": \"est\",\n",
-    "\t#    \"values\": xy_est_series.cpu().detach().numpy(),\n",
-    "\t#    \"color\": \"tab:orange\"\n",
-    "\t#},\n",
-    "\t{\n",
-    "\t\t\"name\": \"real\",\n",
-    "\t\t\"values\": xy_real_series.cpu().detach().numpy(),\n",
-    "\t\t\"color\": \"tab:blue\"\n",
-    "\t}#,\n",
-    "\t#{\n",
-    "\t#    \"name\": \"naive\",\n",
-    "\t#    \"values\": xy_naive_series.cpu().detach().numpy(),\n",
-    "\t#    \"color\": \"tab:green\"\n",
-    "\t#}\n",
-    "]\n",
+    "x_des_min, x_des_max = rp[\"xa\"], rp[\"xa\"]\n",
+    "y_des_min, y_des_max = -3., 1.\n",
+    "x_des_series = torch.rand(n_sims) * (x_des_max - x_des_min) + x_des_min\n",
+    "y_des_series = torch.rand(n_sims) * (y_des_max - y_des_min) + y_des_min\n",
+    "xy_des_series = torch.stack((x_des_series, y_des_series), dim=1).requires_grad_().to(device)\n",
     "\n",
-    "# Common labels for the plots.\n",
-    "name_q = \"q trajectory\"\n",
-    "name_th = \"th trajectory\"\n",
-    "name_xy = \"xy trajectory\"\n",
-    "t_series = torch.arange(0, t_end, dt)\n",
+    "x_start_min, x_start_max = 1., 3.\n",
+    "y_start_min, y_start_max = -3., 1.\n",
+    "x_start_series = torch.rand(n_sims) * (x_start_max - x_start_min) + x_start_min\n",
+    "y_start_series = torch.rand(n_sims) * (y_start_max - y_start_min) + y_start_min\n",
+    "xy_start_series = torch.stack((x_start_series, y_start_series), dim=1).requires_grad_().to(device)\n",
     "\n",
-    "# Create an instance of ErrorPlotter.\n",
-    "ep = pendulum_plot.Error_plotter(rp)\n",
+    "print(xy_start_series)\n",
+    "print(xy_des_series)\n",
     "\n",
-    "# Prepare plot datasets for each column.\n",
-    "# Each call groups a set of datasets to be drawn in one subplot column.\n",
-    "column1 = ep.create_plot_dataset(t=t_series, datasets=datasets_q, reference=q_des, name=name_q)\n",
-    "column2 = ep.create_plot_dataset(t=t_series, datasets=datasets_th, reference=th_des, name=name_th)\n",
-    "column3 = ep.create_plot_dataset(t=t_series, datasets=datasets_xy, reference=xy_des.unsqueeze(0), name=name_xy)\n",
-    "plot_datasets = [column1, column2, column3]\n",
-    "\n",
-    "file_name = \"Error plot.png\"\n",
-    "file_counter = 0\n",
-    "\n",
-    "output_path = os.path.join(save_dir, file_name)\n",
-    "\n",
-    "# Pass the list of columns (plot_dataset objects) to plot_multi.\n",
-    "ep.plot_multi(plot_datasets=plot_datasets, save_path=output_path, axes_names = [\"q\", \"th\", \"xy\"])"
+    "diff = xy_des_series - xy_start_series\n",
+    "print(\"\\n\", diff)"
    ]
   },
   {
