Create code for all 3  simulations

--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -675,7 +675,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Analytic simulation"
+    "#### Multiple simulations for nn sim"
    ]
   },
   {
@@ -684,52 +684,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "timestamp = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
+    "import torch\n",
+    "from torch.profiler import profile, ProfilerActivity\n",
     "\n",
-    "th_ana_series, th_d_ana_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
-    "q_ana_series, q_d_ana_series, q_dd_ana_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
-    "u_ana_series = torch.empty((0,1)).to(device)\n",
-    "tau_q_ana_series = torch.empty((0,2)).to(device)\n",
+    "def run_and_profile_simple(xy_start, xy_des, timestamp, model_nn, **sim_kwargs):\n",
+    "    # Profile everything (CPU + CUDA) in one go\n",
+    "    with profile(\n",
+    "        activities=[ProfilerActivity.CPU, ProfilerActivity.CUDA],\n",
+    "        record_shapes=True,\n",
+    "        profile_memory=True,\n",
+    "        with_stack=True\n",
+    "    ) as prof:\n",
+    "        result = sim_collocated_nn(xy_start, xy_des, timestamp, model_nn, **sim_kwargs)\n",
+    "\n",
+    "    # Now prof is a “real” object, so key_averages() works\n",
+    "    print(\n",
+    "        prof.key_averages()\n",
+    "            .table(sort_by=\"self_cpu_time_total\", row_limit=10)\n",
+    "    )\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use_neural_net = True\n",
+    "model_nn = autoencoders.Autoencoder_double(rp).to(device)\n",
+    "model_location = '../Double_Pendulum/Learning/Models/NN_optimal/NN_0.pth'\n",
+    "model_nn.load_state_dict(torch.load(model_location, weights_only=True))\n",
+    "sim_type = \"group\"\n",
+    "stride = 1\n",
+    "\n",
+    "settling_time_nn_sims = torch.empty(n_sims).to(device)\n",
+    "rmse_nn_sims = torch.empty(n_sims).to(device)\n",
+    "work_nn_sims = torch.empty(n_sims).to(device)\n",
     "\n",
     "\n",
-    "dt = 0.01\n",
-    "t_end = 15\n",
-    "t_series = torch.arange(0, t_end, dt)\n",
     "\n",
-    "th = th_start_ana\n",
-    "th_d = th_d_start_ana\n",
+    "for i, (xy_des, xy_start) in enumerate(zip(xy_des_series, xy_start_series)):\n",
     "\n",
+    "\tprint(\"xy_start:\", xy_start)\n",
+    "\tprint(\"xy_des:\", xy_des)\n",
     "\n",
-    "q_ana, q_d_ana, q_dd_ana = q_start, q_d_start, q_dd_start\n",
+    "\ttimestamp = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
     "\n",
-    "is_clockwise = False\n",
-    "\n",
-    "model = autoencoders.Analytic_transformer(rp)\n",
-    "\n",
-    "for t in torch.arange(0, t_end, dt):\n",
-    "\tt_string = \"Time: [\" + str(t.item().__round__(3)) + \"/\" + str(t_end) + \".0]\"\n",
-    "\tprint(t_string)\n",
-    "\n",
-    "\n",
-    "\tq_ana\n",
-    "\tq_d_ana\n",
-    "\n",
-    "\tth_ana = model.encoder_vmap(q_ana)\n",
-    "\tth_d_ana = (model.jacobian_enc(q_ana) @ q_d_ana.T).T\n",
+    "\tsave_dir = \"collocated_results/batched_sims/simulation_\" + sim_type + f\"_{timestamp}\"\n",
     "\t\n",
-    "\tq_hat_ana = model.decoder_vmap(th_ana, clockwise=model_cw)\n",
-    "\tq_d_hat_ana = (model.jacobian_dec(th_ana) @ th_d_ana.T).T\n",
+    "\tnns_data, q_des, th_des_ana, th_start_ana = run_and_profile_simple(xy_start, xy_des, timestamp, model_nn)\n",
+    "\tnns_data, q_des, th_des_ana, th_start_ana = sim_collocated_nn(xy_start, xy_des, timestamp, model_nn)\n",
     "\n",
-    "\t\"\"\" Obtain Jacobian, dynamical matrices\"\"\"\n",
+    "\tanas_data = sim_collocated_ana(xy_start, xy_des, timestamp, model_ana)\n",
+    "\n",
+    "\tnaives_data = sim_collocated_naive(xy_start, xy_des, timestamp)\n",
     "\t\n",
-    "\tJ_h_inv = model.jacobian_dec(th, is_clockwise).squeeze(0)\n",
-    "\tJ_h_inv_trans = torch.transpose(J_h_inv, 0, 1)\n",
+    "\tplt_col.save_metadata(rp, dt, t_end, timestamp, xy_des, xy_start, Kp, Kd, sim_type, use_neural_net, model_cw, model_location, save_dir)\n",
     "\n",
-    "\tM_q_est, C_q_est, G_q_est = dynamics.dynamical_matrices(rp, q_hat_ana.squeeze(0), q_d_hat_ana.squeeze(0))\n",
-    "\tA_q_est = dynamics.input_matrix(rp, q_hat_ana.squeeze(0))\n",
+    "\txy_multiseries = (nns_data[\"xy_real_s\"], anas_data[\"xy_real_s\"], naives_data[\"xy_naive_s\"])\n",
+    "\tq_multiseries = (nns_data[\"q_real_s\"], anas_data[\"q_ana_s\"], naives_data[\"q_naive_s\"])\n",
+    "\tth_multiseries = (nns_data[\"th_ana_s\"], anas_data[\"th_s\"], naives_data[\"th_naive_s\"])\n",
+    "\n",
+    "\tplt_col.save_trajectory_plots(rp, dt, t_end, xy_des, q_des, th_des_ana, save_dir, xy_multiseries, q_multiseries, th_multiseries)\n",
+    "\tplt_col.create_video(rp, dt, t_end, plotter, stride, q_multiseries, xy_des, save_dir)\n",
+    "\n",
+    "\t\n",
+    "\tth_0_error_series = th_des_ana[0, 0] - nns_data[\"th_ana_s\"][:, 0]\n",
+    "\tth_0_abs_error_series = torch.abs(th_0_error_series)\n",
+    "\t\n",
+    "\tsettling_time, tolerance, match_indices = calc_settling_time(th_0_abs_error_series, th_des_ana, th_start_ana, settling_time_threshold)\n",
+    "\trmse = calc_rmse(nns_data[\"th_ana_s\"], th_des_ana, match_indices)\n",
     "\n",
     "\n",
-    "\t\"\"\" Feed-forward simulation of the system, not on real dynamics \"\"\"\n",
+    "\tjoint_power_series = nns_data[\"tau_q_s\"] * nns_data[\"q_d_real_s\"]\n",
+    "\tpower_series = torch.sum(joint_power_series, dim = 1)\n",
+    "\ttotal_work = torch.sum(power_series)\n",
+    "\n",
+    "\tsettling_time_nn_sims[i] = settling_time\n",
+    "\trmse_nn_sims[i] = rmse\n",
+    "\twork_nn_sims[i] = total_work\n",
     "\n",
     "\tM_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q_est, C_q_est, G_q_est, th_ana, th_d_ana, J_h_inv, J_h_inv_trans)\n",
     "\tA_th = transforms.transform_input_matrix_from_inverse_trans(A_q_est, J_h_inv_trans)\n",
