--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -765,28 +765,38 @@
     "\trmse_nn_sims[i] = rmse\n",
     "\twork_nn_sims[i] = total_work\n",
     "\n",
-    "\tM_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q_est, C_q_est, G_q_est, th_ana, th_d_ana, J_h_inv, J_h_inv_trans)\n",
-    "\tA_th = transforms.transform_input_matrix_from_inverse_trans(A_q_est, J_h_inv_trans)\n",
+    "\tplot_settling(th_0_error_series, tolerance, settling_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_boxplot(values_nn, values_ana, values_q, plot_title, ylabel):\n",
+    "\tfig, ax = plt.subplots(figsize=(5, 3))\n",
+    "\tax.set_ylabel(ylabel)\n",
+    "\tax.set_title(plot_title)\n",
     "\n",
-    "\tu = torch.pinverse(A_th) @ ((Kp @ (th_des - th_ana).T + Kd @ (th_d_des - th_d_ana).T))\n",
-    "\tu = u + torch.pinverse(A_th) @ G_th\n",
+    "\tboxdata = [values_nn.cpu().detach(), values_ana.cpu().detach(), values_q.cpu().detach()]\n",
+    "\tcolors = [\"tab:orange\", \"tab:blue\", \"tab:green\"]\n",
+    "\tlabels = [r\"$\\theta_L$\", r\"$\\theta_A$\", r\"$q$\"]\n",
     "\n",
-    "\t\"\"\" Update the real system and apply latent control input. \"\"\"\n",
-    "\n",
-    "\tM_q_real, C_q_real, G_q_real = dynamics.dynamical_matrices(rp, q_ana.squeeze(0), q_d_ana.squeeze(0))\n",
-    "\tA_q_real = dynamics.input_matrix(rp, q_ana.squeeze(0))\n",
-    "\n",
-    "\ttau_q_real = A_q_real * u\n",
-    "\tq_dd_ana = (torch.pinverse(M_q_real) @ (tau_q_real - C_q_real @ ((q_d_ana).T)- G_q_real)).T  #  - C_damp @ ((q_d_real).T) \n",
-    "\tq_d_ana = q_d_ana + q_dd_ana * dt\n",
-    "\tq_ana = q_ana + q_d_ana * dt\n",
-    "\tq_ana = transforms.wrap_to_pi(q_ana)\n",
+    "\tbplot = ax.boxplot(boxdata,\n",
+    "\t\t\t\t\tpatch_artist=True,  # fill with color\n",
+    "\t\t\t\t\ttick_labels=labels)  # will be used to label x-ticks\n",
     "\t\n",
-    "\tth_ana = model.encoder_vmap(q_ana)\n",
-    "\tth_d_ana = (model.jacobian_enc(q_ana) @ q_d_ana.T).T\n",
+    "\tfor median in bplot[\"medians\"]:\n",
+    "\t\tmedian.set_color(\"black\")\n",
     "\n",
+    "\t# fill with colors\n",
+    "\tfor patch, color in zip(bplot['boxes'], colors):\n",
+    "\t\tpatch.set_facecolor(color)\n",
     "\n",
-    "\t\"\"\" Store data for plotting \"\"\"\n",
+    "\tplt.show()"
+   ]
+  },
     "\n",
     "\tth_ana_series = torch.cat((th_ana_series, th_ana.detach()), dim=0)\n",
     "\tth_d_ana_series = torch.cat((th_d_ana_series, th_d_ana.detach()), dim=0)\n",
