--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -797,22 +797,65 @@
     "\tplt.show()"
    ]
   },
-    "\n",
-    "\tth_ana_series = torch.cat((th_ana_series, th_ana.detach()), dim=0)\n",
-    "\tth_d_ana_series = torch.cat((th_d_ana_series, th_d_ana.detach()), dim=0)\n",
-    "\t\n",
-    "\tq_ana_series = torch.cat((q_ana_series, q_ana.detach()), dim=0)\n",
-    "\tq_d_ana_series = torch.cat((q_d_ana_series, q_d_ana.detach()), dim=0)\n",
-    "\tq_dd_ana_series = torch.cat((q_dd_ana_series, q_dd_ana.detach()), dim=0)\n",
-    "\n",
-    "\tu_ana_series = torch.cat((u_ana_series, u.detach()), dim=0)\n",
-    "\ttau_q_ana_series = torch.cat((tau_q_ana_series, tau_q_real.T.detach()), dim=0)\n",
-    "\n",
-    "\tprint(\"\")\n",
-    "\n",
-    "\t\n",
-    "\t\n"
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "make_boxplot(rmse_nn_sims, rmse_ana_sims, rmse_nn_sims, plot_title = \"Steady state error, collocated & naive controller\", ylabel='RMSE [m]')\n",
+    "make_boxplot(work_nn_sims, work_ana_sims, work_nn_sims, plot_title = \"Performed work, collocated & naive controller\", ylabel='Work [J]')\n",
+    "make_boxplot(settling_time_nn_sims, settling_time_ana_sims, settling_time_nn_sims, plot_title = \"Settling time, collocated & naive controller\", ylabel='Settling time [s]')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(settling_time_nn_sims)\n",
+    "print(rmse_nn_sims)\n",
+    "print(work_nn_sims)\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.set_ylabel('Settling time [s]')\n",
+    "\n",
+    "boxdata = [rmse_nn_sims.cpu().detach(), rmse_nn_sims.cpu().detach()]\n",
+    "colors = [\"tab:orange\", \"tab:blue\"]\n",
+    "labels = [\"hi\", \"ho\"]\n",
+    "\n",
+    "bplot = ax.boxplot(boxdata,\n",
+    "\t\t\t\t   patch_artist=True,  # fill with color\n",
+    "\t\t\t\t   tick_labels=labels)  # will be used to label x-ticks\n",
+    "\n",
+    "# fill with colors\n",
+    "for patch, color in zip(bplot['boxes'], colors):\n",
+    "\tpatch.set_facecolor(color)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
